--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Smart_mobility
+spring.application.name=Smart Mobility
 spring.datasource.url=jdbc:postgresql://localhost:5432/PFE
 spring.datasource.username=sky
 spring.datasource.password=2647
