--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
+
+
 spring.application.name=Smart Mobility
-spring.datasource.url=jdbc:postgresql://localhost:5432/PFE
+spring.datasource.url=jdbc:postgresql://dpg-cq8qtm5ds78s7394ogb0-a.oregon-postgres.render.com/agrogeomarket
 spring.datasource.username=sky
-spring.datasource.password=2647
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=wxTKzGTq65RxTQSjvjWQffzFyiJ2gx4W
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=2647
 # Logging configuration
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.myapp=TRACE
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
 
 nominatim.url=https://nominatim.openstreetmap.org
